🐛 Fix user status update and add z-index to GamePopup

--- a/front_end/app/src/components/game/GamePopup/GamePopup.module.css
+++ b/front_end/app/src/components/game/GamePopup/GamePopup.module.css
@@ -16,6 +16,7 @@
   overflow-y: auto;
   overflow-x: hidden;
 
+  z-index: 1000;
 }
 
 .CardPopup {
